muoni/GraalVM/language/tests/error/TypeError05.hn
fn main() {
  f = 1 < 2;
  f();  
}  
